--- a/forgetPassword.html
+++ b/forgetPassword.html
@@ -7,5 +7,9 @@
 <body>
     <a href="index.html">Home</a>
     <h1>Forget password</h1>
+
+    <label for="">Registered mobile or email</label><br>
+    <input placeholder="email or mobile" type="text"><br><br>
+    <button>Get password reset link</button>
 </body>
 </html>
