--- a/login.html
+++ b/login.html
@@ -1,15 +1,29 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
+
 <body>
-    <input placeholder="Email or mobile" type="email" >
+    <h1>Sign-in</h1>
+    <label for="">Email or mobile</label><br>
+    <input placeholder="Email or mobile" type="email">
+    <br>
+    <br>
+    <label for="">password</label><br>
     <input placeholder="password" type="password">
+    <br>
+    <br>
     <button>Login</button>
+    <br>
+    <br>
     <a href="forgetPassword.html">Forget password</a>
+    <br>
+    <br>
     <button> <a href="register.html">don't have an account . Register</a> </button>
 
 </body>
+
 </html>
