--- a/register.html
+++ b/register.html
@@ -1,23 +1,38 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
 </head>
+
 <body>
-     <label for="">Email or number</label><br>
+    <h1>Sign-up</h1>
+    <!-- This is label and input filed for email and password -->
+    <label for="">Email or number</label><br>
     <input placeholder="Enter your email" type="text"><br><br>
+
+    <!-- This is username filed  -->
 
     <label for="">username</label><br>
     <input placeholder="username" type="text"><br><br>
-    
+
+    <select name="" id="">
+        <option value="">Male</option>
+        <option value="">Female</option>
+        <option value="">Prefer not to say</option>
+    </select>
+    <br>
+    <br>
+
     <label for="">Password</label><br>
     <input placeholder="password" type="text"><br><br>
 
     <label for="">confirm password</label><br>
-    <input placeholder="confirm password" type="text"><br>
-    <input  type="checkbox"><br>
+    <input placeholder="confirm password" type="text"><br><br>
+    <input type="checkbox">Agree T & C<br><br>
     <button>Register</button><br>
-    <p>Already have an account <a href="login.html">Login</a>  </p>
+    <p>Already have an account <a href="login.html">Login</a> </p>
 </body>
+
 </html>
